themes/dreamrider/sass/_page-templates.scss
/* ----------- Front Page  -----------*/


/* Hero */

.hero-banner {
  width: auto;
  margin-bottom: 20px;
  text-align:center;
  overflow: hidden;
  img {
    width:100%;
    height:auto;
  }
}

.main-title {
  text-align: center;
  h1 {
    width: 90%;
    margin: 0 auto;
    font-size: 2.3rem;
    font-family: 'montserrat-light';
    line-height: 1.3;
  }
  p {
    width: 70%;
    margin: 30px auto;
    font-size: 1.2rem;
  }
}

.cta-button {
  @include cta-button;
}


/* Programs */

.programs {
  @include blue-section;
  h2{
    @include white-on-blue-heading;
    margin-top: 0;
  }
}

.individual-program {
  margin: 0 20px;
  display: inline-block;
  img {
    width: auto;
    max-height: 200px;
    margin-bottom: 0;
  }

  h4 {
    margin-top: 0px;
    text-transform: uppercase;
  }
  img {
    margin: 20px 0 5px;
  }

  p {
    width: 240px;
    margin: 0 auto 20px;
    font-size: 1.1rem;
  }
}


/* Learning Benefits */

.learning-benefits {
  @include iconography;
  h2 {
    @include black-on-white-heading;
  }
}


/* Testimonials */

.testimonials {
  @include blue-section;
  padding: 40px 20px 20px;
  h2 {
    @include white-on-blue-heading;
    margin-bottom: 50px;
  }

}

.checkmark-icon {
  width: 65px;
  height: auto;
}

.individual-testimonial { //container for both speech bubble and source
  margin-bottom: 20px;
  &:nth-child(even) .testimonial-bubble { //Middle speech bubble
    background: none;
    position: relative;
    p {
      margin-top: 10px;
    }
    &:before { //Background hack for the style of middle speech bubble
      width: 280px;
      height: 195px;
      background: url('../../images/quote-bubble.png') no-repeat;
      background-size: 100%;
      content: "";
      position: absolute;
      left: 0;
      transform: scaleX(-1);
    }
  }
  &:nth-child(even) .testimonial-source { //Counter-positions the source section of the middle testimonial
    div:first-child {
      order: 2;
    }
    p {
      text-align: right;
    }
  }
}

.testimonial-bubble {
  width: 280px;
  height: 195px;
  margin: 0 auto;
  padding: 12px 20px;
  color: $color_text-testimonial-main;
  text-align: left;
  line-height: 1.2;
  background: url('../../images/quote-bubble.png') no-repeat;
  background-size: 100% ;
  p {
    height: 105px;
    margin-top: 0px;
    overflow: hidden;
    position: relative;
    &:after {          //Adds ellipsis after clipping the text
      width: 10%;
      height: 20px;
      content: "...";
      position: absolute;
      bottom: 0;
      right: 0;
    }
  }
}

.testimonial-source {
  width: 350px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  div:first-child {
    width: 25%;
  }
  div:last-child {
    width: 65%;
    text-align: left;
  }
  img {
    width: 50px;
    height: auto;
    margin-top: 0;
;
  }
  p {
    @include quote-source;
    font-size: 0.7rem;
    color: $color_text-testimonials;
  }
}

.free-trial-button {
  @include cta-button;
  a {
    padding: 13px 30px;
  }
}


/* Community Impact */

.community-impact {
  @include iconography;
  h2 {
    @include black-on-white-heading;
  }
}

.btn-inverted {
  @include inverted-cta-button;
}


/* Community Partners: Logos */

//Styles for actual logos is in a separate partial.

.community-partners-container {
  width: 100%;
  margin-top: 50px;
  text-align: center;
  border-top: 1px solid $light-gray;
  h2 {
    @include black-on-white-heading;
    margin-bottom: 5px;
  }
}


/* Community Partners: Testimonials */

.partners-testimonials {
  width: 80%;
  margin: 50px auto;
  font-size: 1.3rem;
  letter-spacing: 1px;
  line-height: 1.3;
}

.quotation-mark {
  width: 70px;
  height: auto;
  margin-bottom: 20px;
}

.quote-source {
  font-size: 0.8rem;
  color: $color_text-partner-testimonial;
  letter-spacing: 2px;
  line-height: 2;
}

.quote-separator {
  width: 15%;
  height: 2px;
  margin: 50px auto;
  background-color: $color_separator-partner-testimonial;
}

.request-demo-button {
  @include cta-button;
  margin-bottom: 70px;
  h2 {
    font-family: $font_heading-section;
  }
}


/* Awards */

.awards {
  @include blue-section;
  padding: 25px;
  h2 {
    @include white-on-blue-heading;
  }
}



/* ----------- About Page  -----------*/

.page-template-about .site-content {
  font-size: 1.2rem;
  text-align: center;
}

.about-title {
  @include page-heading;
}

.logo-container {
  max-width: 100%;
  height: auto;
  overflow: hidden;
  img {
    max-width: none;
    width: auto;
    height: 120px;
    margin-top: 30px;
    transform: translateX(-45%);
  }
}

.about-intro {
  width: 90%;
  margin: 0 auto;
  padding: 35px 0;
}

.about-quote {
  @include blue-section;
  margin-top: 10px;
  padding: 15px 25px;
  font-family: 'montserrat-ultra-light', sans-serif;
  .quote-source {
    color: #fff;
  }
}

.about-story {
  @extend .about-intro;
  margin-bottom: 0px;
  padding: 35px 0 18px;
  h3 {
    @include about-black-heading;
  }
}

.about-pictures div {
  line-height: 0px;
}

.about-today {
  @include blue-section;
  margin: 0;
  padding: 5px 25px;
  h3 {
    font-family: $font_heading-section;
    text-transform: uppercase;
    letter-spacing: 3px;
  }
  p {
    font-family: 'montserrat-ultra-light', sans-serif;
  }
}

.about-community {
  padding: 20px 20px 5px;
  h3 {
    @include about-black-heading;
  }
  p {
    text-align: center;
  }
}

.donate-button {
  @include cta-button;
}

